# KMSDemo-SDK

./: CMakeLists.txt  build.gradle
src/main/: AndroidManifest.xml
src/main/cpp/: bn.c  bn.h  bn_test.c  bn_test.h  cela_rand.c  cela_rand.h  com_juzix_kms_NativeECDSA.c  com_juzix_kms_NativeECDSA.h  common.c  common.h  ecdsa.c  ecdsa.h  ecdsa_di_co.c  ecdsa_di_co.h  ecdsa_di_co_test.c  ecdsa_di_co_test.h  ecdsa_test.c  ecdsa_test.h  ecschnorr.c  ecschnorr.h  macro.h  main.c  pailler.c  pailler.h  pailler_test.c  pailler_test.h  secp256k1_curve.c  secp256k1_curve.h  secp256k1_fp_ecp.c  secp256k1_fp_ecp.h  secp256k1_fp_ecp_test.c  secp256k1_fp_ecp_test.h  sha2.cpp  sha2.h  typedef.h  u8operation.c  u8operation.h
src/main/java/com/juzix/kms/: HexUtil.java  NativeECDSA.java  SecureRandomUtils.java
src/main/java/com/juzix/sdk/: Compute.java  ComputeEcdsaKeyGen.java  ComputeEcdsaSign.java  ComputeResult.java  DefaultSession.java  MemorySessionDao.java  MpcContext.java  MpcSdk.java  Session.java  SessionDao.java
src/main/java/com/juzix/sdk/test/: MpcSdkTestV2.java
src/main/java/com/juzix/sdk/utils/: JsonMapUtil.java
src/main/res/values/: strings.xml
src/test/java/com/juzix/kms/: ExampleUnitTest.java  MpcSdkTest.java  MpcSdkTestV2.java
